GNOME Bugzilla – Bug 672547
epiphany-3.3.92 not starting
Last modified: 2012-03-21 14:09:20 UTC
when starting epiphany ephy-profile-migrator uses 100% cpu and prevents epiphany to start. after killing ephy-profile-migrator epiphany starts as expected
note that this started to happen after updating to glib 2.31.22. With 2.31.20 everything was fine.
Can any of you guys tell me what are the contents of your .gnome2/epiphany/ephy-history.xml file? Particularly, whether it has any actual history item.
$ cat ~/.gnome2/epiphany/ephy-history.xml <?xml version="1.0"?> <ephy_history version="1.0"/>
Created attachment 210235 [details] [review] empty-history.diff This patch might fix the issue, feedback welcome.
(In reply to comment #3) > $ cat ~/.gnome2/epiphany/ephy-history.xml > <?xml version="1.0"?> > <ephy_history version="1.0"/> Cool, thanks. Pretty sure the patch I just posted will fix it. I'll ask the Release Team to push it in.
works fine. thanks for the quick fix.
Thank you, pushed this to master with permission from the r-t.