profile-migrator: do not freak out if the history is empty

If the old history file exists but has no actual visits we'll enter
into an infinite loop.

https://bugzilla.gnome.org/show_bug.cgi?id=672547